--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "simplito/elliptic-php": "^1.0",
+        "kornrunner/secp256k1": "^0.2",
         "symfony/polyfill-mbstring": "^1.23"
     },
     "require-dev": {
