--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,13 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
+        "kornrunner/secp256k1": "^0.2",
         "laravel/breeze": "^1.23",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "simplito/elliptic-php": "^1.0",
-        "kornrunner/secp256k1": "^0.2"
+        "phpseclib/phpseclib": "~3.0",
+        "simplito/elliptic-php": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.13",
