--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "phpseclib/phpseclib": "~3.0",
+        "predis/predis": "^2.2",
+        "pusher/pusher-php-server": "^7.2",
         "simplito/elliptic-php": "^1.0"
     },
     "require-dev": {
