--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "firebase/php-jwt": "^6.8",
         "guzzlehttp/guzzle": "^7.2",
         "kornrunner/secp256k1": "^0.2",
         "laravel/breeze": "^1.23",
