[Soketi] change soketi server

--- a/.env.example
+++ b/.env.example
@@ -44,12 +44,12 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=1684806
-PUSHER_APP_KEY=8cd186ba5249dd62913a
-PUSHER_APP_SECRET=6a031032891d61643c2e
-PUSHER_HOST=127.0.0.1
-PUSHER_PORT=6001
-PUSHER_SCHEME=https
+PUSHER_APP_ID=crypto-trade
+PUSHER_APP_KEY=crypto-trade-key
+PUSHER_APP_SECRET=crypto-trade-secret
+PUSHER_HOST=crypto-socket.pi55xx.com
+PUSHER_PORT=443
+PUSHER_SCHEME=http
 PUSHER_APP_CLUSTER=ap1
 
 VITE_APP_NAME="${APP_NAME}"
@@ -58,3 +58,8 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SOKETI_DEBUG=1
+SOKETI_DEFAULT_APP_ID=crypto-trade
+SOKETI_DEFAULT_APP_KEY=crypto-trade-key
+SOKETI_DEFAULT_APP_SECRET=crypto-trade-secret
